After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 641199 - [build] A new build failure in git/master
[build] A new build failure in git/master
Status: RESOLVED FIXED
Product: gnome-panel
Classification: Other
Component: libpanel-applet
git master
Other Linux
: Normal blocker
: ---
Assigned To: Panel Maintainers
Panel Maintainers
Depends on:
Blocks:
 
 
Reported: 2011-02-01 22:58 UTC by David Ronis
Modified: 2011-02-02 00:06 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description David Ronis 2011-02-01 22:58:05 UTC
I just updated gnome-panel and tried building.  I have also upgraded gtk+ to 2.99.3 The build dies with:
make[4]: Entering directory `/home/ronis/Project/notar/GNOME/garnome/svn/gnome-panel/work/main.d/gnome-panel-git/libpanel-applet'
/bin/sh ../libtool --tag=CC   --mode=compile /usr/bin/gcc -DHAVE_CONFIG_H -I. -I..  -DGSEAL_ENABLE -pthread -DORBIT2=1 -I/opt/garnome-svn-2.91.5/include/gtk-3.0 -I/opt/garnome-svn-2.91.5/include/atk-1.0 -I/opt/garnome-svn-2.91.5/include/cairo -I/opt/garnome-svn-2.91.5/include/gdk-pixbuf-2.0 -I/opt/garnome-svn-2.91.5/include/pango-1.0 -I/opt/garnome-svn-2.91.5/include/gio-unix-2.0/ -I/opt/garnome-svn-2.91.5/include -I/opt/garnome-svn-2.91.5/include/glib-2.0 -I/opt/garnome-svn-2.91.5/lib/glib-2.0/include -I/opt/garnome-svn-2.91.5/include/freetype2 -I/opt/garnome-svn-2.91.5/include/gconf/2 -I/opt/garnome-svn-2.91.5/include/orbit-2.0 -I/usr/include/pixman-1 -I/usr/include/libpng12   -I../libpanel-applet -DGNOMELOCALEDIR=\""/opt/garnome-svn-2.91.5/share/locale"\"  -I/opt/garnome-svn-2.91.5/include  -I/opt/garnome-svn-2.91.5/include -L/opt/garnome-svn-2.91.5/lib -O2 -g -pipe -DGWEATHER_I_KNOW_THIS_IS_UNSTABLE -MT panel-applet.lo -MD -MP -MF .deps/panel-applet.Tpo -c -o panel-applet.lo panel-applet.c
libtool: compile:  /usr/bin/gcc -DHAVE_CONFIG_H -I. -I.. -DGSEAL_ENABLE -pthread -DORBIT2=1 -I/opt/garnome-svn-2.91.5/include/gtk-3.0 -I/opt/garnome-svn-2.91.5/include/atk-1.0 -I/opt/garnome-svn-2.91.5/include/cairo -I/opt/garnome-svn-2.91.5/include/gdk-pixbuf-2.0 -I/opt/garnome-svn-2.91.5/include/pango-1.0 -I/opt/garnome-svn-2.91.5/include/gio-unix-2.0/ -I/opt/garnome-svn-2.91.5/include -I/opt/garnome-svn-2.91.5/include/glib-2.0 -I/opt/garnome-svn-2.91.5/lib/glib-2.0/include -I/opt/garnome-svn-2.91.5/include/freetype2 -I/opt/garnome-svn-2.91.5/include/gconf/2 -I/opt/garnome-svn-2.91.5/include/orbit-2.0 -I/usr/include/pixman-1 -I/usr/include/libpng12 -I../libpanel-applet -DGNOMELOCALEDIR=\"/opt/garnome-svn-2.91.5/share/locale\" -I/opt/garnome-svn-2.91.5/include -I/opt/garnome-svn-2.91.5/include -L/opt/garnome-svn-2.91.5/lib -O2 -g -pipe -DGWEATHER_I_KNOW_THIS_IS_UNSTABLE -MT panel-applet.lo -MD -MP -MF .deps/panel-applet.Tpo -c panel-applet.c  -fPIC -DPIC -o .libs/panel-applet.o
panel-applet.c:1353:50: error: expected declaration specifiers or '...' before 'GdkNativeWindow'
panel-applet.c: In function 'panel_applet_create_foreign_surface_for_display':
panel-applet.c:1359:60: error: 'xid' undeclared (first use in this function)
panel-applet.c:1359:60: note: each undeclared identifier is reported only once for each function it appears in
panel-applet.c: At top level:
panel-applet.c:1370:39: error: expected declaration specifiers or '...' before 'GdkNativeWindow'
panel-applet.c: In function 'panel_applet_get_pattern_from_pixmap':
panel-applet.c:1393:71: error: 'xid' undeclared (first use in this function)
panel-applet.c:1393:71: error: too many arguments to function 'panel_applet_create_foreign_surface_for_display'
panel-applet.c:1351:1: note: declared here
panel-applet.c: In function 'panel_applet_get_background':
panel-applet.c:1475:17: error: too many arguments to function 'panel_applet_get_pattern_from_pixmap'
panel-applet.c:1369:1: note: declared here
make[4]: *** [panel-applet.lo] Error 1
Comment 1 Vincent Untz 2011-02-02 00:06:42 UTC
This problem has been fixed in the development version. The fix will be available in the next major software release. Thank you for your bug report.