libpanel-applet: Drop usage of GdkNativeWindow

It got removed from gtk+ 3.

https://bugzilla.gnome.org/show_bug.cgi?id=641199